app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
@import "bootstrap";

:root {
  --bs-font-sans-serif:
    "Roboto",
    "Segoe UI",
    "Helvetica Neue",
    "Noto Sans",
    system-ui,
    -apple-system,
    "Apple Color Emoji",
    "Segoe UI Emoji",
    "Segoe UI Symbol",
    "Noto Color Emoji";
  --background-gradient: linear-gradient(135deg, #8f75da 0%, #727cf5 60%);
}

.bg-default {
  background: var(--background-gradient);
}

@include media-breakpoint-up(lg) {
  .navbar {
    max-width: 10rem;
  }
}

